--- a/src/Components/ShoppingList.css
+++ b/src/Components/ShoppingList.css
@@ -12,7 +12,7 @@ body {
   color: #007bff; 
   text-decoration: none; 
   font-weight: bold;
-  margin-left: 20px; 
+  margin-right: 1.2rem; 
   transition: color 0.3s ease; 
 }
 
@@ -20,7 +20,6 @@ body {
   color: #FFDAB9;
   text-decoration: underline; 
 }
-
 
 .shopping-list-container {
   width: 100%; 
